@@ -1608,15 +1608,24 @@ li.sort-available:hover {
 }
 
 .quarterspan { 
-	font-size    : 90%;
-	display      : inline-block;
-	width        : 146px;
-	padding      : 4px;
-	padding-left : 6px;
-	margin-right : 5px;
-	margin-top   : 3px;
-	white-space  : nowrap;
-	overflow     : hidden;
+	font-size      : 90%;
+	display        : inline-block;
+	width          : 146px;
+	padding        : 3px;
+	padding-left   : 5px;
+	white-space    : nowrap;
+	overflow       : hidden;
+	vertical-align : middle;
+}
+
+.onesixty { 
+	display        : inline-block;
+	width          : 160px;
+	padding        : 3px;
+	padding-left   : 5px;
+	white-space    : nowrap;
+	overflow       : hidden;
+	vertical-align : middle;
 }
 
 .codespan { 
