@@ -8,12 +8,14 @@
 
 	my $filepath = $Tab::file_root."/tmp/".$filename;
 
-	Tab::debuglog("from the module filename is $filename filepath is $filepath");
-
 	my $round = Tab::Round->retrieve($round_id);
 	my @panels = sort {$a->letter cmp $b->letter} $round->panels;
 	@panels = sort {length($a->letter) <=> length($b->letter)} @panels;
+
+
 	my $event = $round->event;
+
+	my $no_codes++ if $event->setting("code_style") eq "names";
 
 	open (TEXOUT, ">>$filepath.tex");
 
@@ -25,67 +27,84 @@
 
 	my $switch;
 
-	print TEXOUT "\\begin{center}";
+	print TEXOUT "\\normalsize\n";
+	print TEXOUT "\\begin{tabular}{p{1in}p{2in}p{3.5in}}\n";
+	print TEXOUT " & & \\\\ \n";
+	print TEXOUT ($round->label) ? "\\Large ". Tab::texify($round->label) : "\\Large Session ". Tab::texify($round->name);
+	print TEXOUT " & \\Large Start: ".$start->hour_12.":".$start->strftime("%M")." ".$start->strftime("%p");
+	print TEXOUT " & \\Large ". Tab::texify($round->event->name);
+	print TEXOUT "\\\\ \n";
+	print TEXOUT "\\end{tabular}\n";
+	print TEXOUT "\\nopagebreak[3]\n";
+	print TEXOUT "\\bigskip\n";
+	print TEXOUT "\\newline\n";
 
-		foreach my $panel (@panels) { 
+	foreach my $panel (@panels) { 
 
-			my @entries = $m->comp("/funclib/panel_entries.mas", panel => $panel);
+		my @entries = $m->comp("/funclib/panel_entries.mas", panel => $panel);
 
-			@entries = sort {$a->name cmp $b->name} @entries;
+		@entries = sort {$a->name cmp $b->name} @entries;
 
-			my @judges = $m->comp("/funclib/panel_judges.mas", panel => $panel);
+		my @judges = $m->comp("/funclib/panel_judges.mas", panel => $panel);
 
-			print TEXOUT "\\begin{tabular}{ll}\n";
 
-			my $start = $panel->round->timeslot->start;
-			$start->set_time_zone($tz);
+		my $start = $panel->round->timeslot->start;
+		$start->set_time_zone($tz);
 
-			print TEXOUT "\\multicolumn{2}{c}{\\large Chamber ". $panel->letter."  Room: ";
-			print TEXOUT Tab::texify($panel->room->name);
-			print TEXOUT " Start ";
-			print TEXOUT $start->hour_12.":".$start->strftime('%M')." ".$start->strftime('%p');
-			print TEXOUT " }\\\\\n";
-			print TEXOUT "\\multicolumn{2}{c}{ Judges: ";
-		
-			my $jc;
-
-			foreach my $judge (@judges) { 
-				print TEXOUT ", " if $jc;
-				print TEXOUT Tab::texify($judge->last);
-				$jc++;
-			}
-
-			print TEXOUT "}\\\\\n";
-			print TEXOUT "\\hline \n";
-
-			my $cc;
-
-			foreach my $entry (@entries) { 
-
-				print TEXOUT Tab::texify($entry->code." ".$entry->name);
-				print TEXOUT ", ";
-				print TEXOUT Tab::texify($entry->school->short_name);
-
-				if ($cc == 1) {
-					
-					print TEXOUT " \\\\ \n";
-					$cc = 0;
-
-				} else {
-
-					print TEXOUT " & ";
-					$cc++;
-				}
+		print TEXOUT "\\large Chamber ". $panel->letter."  \\hfill Room: ";
+		print TEXOUT Tab::texify($panel->room->name);
+		print TEXOUT "\\smallskip\n";
+		print TEXOUT "\\newline\n";
+		print TEXOUT "\\large Judges: ";
 	
+		my $jc;
+
+		foreach my $judge (@judges) { 
+			print TEXOUT ", " if $jc;
+			print TEXOUT Tab::texify($judge->last);
+			$jc++;
+		}
+
+		print TEXOUT "\n";
+		print TEXOUT "\\normalsize \n";
+		print TEXOUT "\\medskip\n";
+		print TEXOUT "\\newline\n";
+		print TEXOUT "\\begin{tabular}{p{3.5in}p{3.5in}}\n";
+		print TEXOUT "\\hline \n";
+
+		my $cc;
+
+		foreach my $entry (@entries) { 
+
+			if ($no_codes) { 
+				print TEXOUT Tab::texify($entry->name);
+			} else { 
+				print TEXOUT Tab::texify($entry->code." ".$entry->name);
 			}
+
+			print TEXOUT ", ";
+			print TEXOUT Tab::texify($entry->school->short_name);
+
+			if ($cc == 1) {
+				
+				print TEXOUT " \\\\ \n";
+				$cc = 0;
+
+			} else {
+
+				print TEXOUT " & ";
+				$cc++;
+			}
+
+		}
 	
 		print TEXOUT "\\\\ \n ";
 		print TEXOUT "\\multicolumn{2}{l}{\\large}\\\\\n";
 		print TEXOUT "\\end{tabular}\n";
+		print TEXOUT "\\newline\n";
 
 	}
 
-	print TEXOUT "\\end{center}\n";
 	close TEXOUT;
 
 	return;
