@@ -1,0 +1,202 @@
+<%args>
+	$tourn
+	$event_id 
+	$round_id => undef
+	$total_panels => undef
+</%args>
+<%init>
+
+	my $event = Tab::Event->retrieve($event_id);
+
+	my $no_codes++ if $event->setting("code_style") eq "names";
+
+	my $round = Tab::Round->retrieve($round_id) if $round_id;
+
+	my @entries;
+	my @already_entries;
+	my @panels;
+	my $num_panels;
+
+	if ($round) { 
+
+		@panels = $round->panels;
+		$total_panels = scalar @panels unless $total_panels;
+
+		my @safe;
+		my $letter = "A";
+
+		foreach ( 1 .. $total_panels ) {
+
+			my $panel = shift @panels if @panels;
+
+			if ($panel) { 
+
+				$panel->letter($letter);
+				$panel->update;
+
+			} else { 
+
+				$panel = Tab::Panel->create({ 
+					letter => $letter,
+					round => $round->id
+				});
+
+			}
+
+
+			push @safe, $panel;
+
+			$letter++;
+
+		}
+
+		foreach my $panel (@panels) { 
+			$panel->delete;
+		}
+
+		@panels = @safe;
+
+		$num_panels = scalar @panels;
+
+		@already_entries = sort {$a->code <=> $b->code} $m->comp('/funclib/round_entries.mas', round => $round);
+		@already_entries = sort {$a->name cmp $b->name} @already_entries if $no_codes;
+		@already_entries = sort {$a->panelid <=> $b->panelid} @already_entries;
+
+	}
+
+	@entries = sort {$a->code <=> $b->code} Tab::Entry->search( event => $event->id, waitlist => 0, unconfirmed => 0, dropped => 0);
+	@entries = sort {$a->name cmp $b->name} @entries if $no_codes;
+
+	my %dont = ();
+
+	foreach my $ae (@already_entries) { 
+		$dont{$ae->id}++;
+	}
+
+</%init>
+
+	<& menu.mas, tourn => $tourn, event => $event &>
+
+	<div class="left huge">
+
+		<h2>Manually panel <% $event->name %></h2>
+		
+		<form action="manual.mhtml" method="post">
+		<input type="hidden" name="event_id" value="<% $event->id %>">
+
+		<div class="centeralign yellowrow block">
+			
+			<span class="hundo">
+				<h4>Round</h4>
+			</span>
+
+			<span class="judgechart">
+				<select name="round_id" class="fixedsmall">
+
+					<option value=""></option>
+
+%					foreach my $round (sort {$a->name <=> $b->name} $event->rounds) { 
+						<option value="<% $round->id %>" <% $round_id && $round_id == $round->id ? "selected" : "" %>>
+							<% $round->realname %>
+						</option>
+%					}
+
+				</select>
+			</span>
+
+			<span class="huntwofive">
+				<h4># of Sections</h4>
+			</span>
+
+			<span class="hundo">
+				<input type="number" name="total_panels" min="1" max="99" size="4" value="<% $num_panels %>">
+			</span>
+
+			<span class="hundo">
+				<input type="submit" class="smallish" value="Go">
+			</span>
+
+		</div>
+		</form>
+
+%		if (@panels) { 
+
+			<h4 style="padding-top: 12px;">Assign entrants to panels for <% $round->realname %></h4>
+
+			<form action="manual_save.mhtml" method="post">
+
+			<input type="hidden" name="round_id" value="<% $round->id %>">
+
+%			foreach my $entry (@entries) { 
+
+%				next if $dont{$entry->id};
+	
+				<span class="thirdspan evenrow">
+
+					<span class="onesixty smallish padless">
+						<span class="onesixty nowrap padno">
+							<a href="/register/entry/edit.mhtml?entry_id=<% $entry->id %>" class="plain block padno">
+							<% $no_codes ? "" : $entry->code %> <% $entry->code ne $entry->name || $no_codes ? $entry->name : "" %> 
+							</a>
+						</span>
+						<br />
+						<span class="onesixty nowrap padless smallish">
+							<% $entry->school->short_name %>
+						</span>
+					</span>
+
+					<select name="<% $entry->id %>">
+
+						<option value=""></option>
+
+%						foreach my $panel (@panels) { 
+							<option value="<% $panel->id %>">
+								<% $panel->letter %>
+							</option>
+%						}
+					</select>
+
+				</span>
+
+%			}
+
+%			foreach my $entry (@already_entries) { 
+	
+				<span class="thirdspan evenrow">
+
+					<span class="onesixty smallish padless">
+						<span class="onesixty nowrap padno">
+							<a href="/register/entry/edit.mhtml?entry_id=<% $entry->id %>" class="plain block padno">
+							<% $no_codes ? "" : $entry->code %> <% $entry->code ne $entry->name || $no_codes ? $entry->name : "" %> 
+							</a>
+						</span>
+						<br />
+						<span class="onesixty nowrap padless smallish">
+							<% $entry->school->short_name %>
+						</span>
+					</span>
+
+					<select name="<% $entry->id %>">
+
+						<option value=""></option>
+
+%						foreach my $panel (@panels) { 
+							<option value="<% $panel->id %>" <% $panel->id == $entry->panelid ? "selected" : "" %>>
+								<% $panel->letter %>
+							</option>
+%						}
+					</select>
+
+				</span>
+
+%			}
+
+			<div class="liblrow rightalign">
+				<input type="submit" value=" Save Panels ">
+				</form>
+			</div>
+
+%		}
+
+	</div>
+
