@@ -46,6 +46,7 @@
 	}
 
 	my $no_judge_codes++ if $event->judge_group->setting('no_codes');
+	my $no_codes++ if $event->setting('code_style') eq "names";
 	my $big_codes++;
 
 	my @ballots = $m->comp("/funclib/round_ballots.mas", round => $round);
@@ -130,7 +131,7 @@
 						<span class="<% $big_codes ? "namespan nowrap" : $show ? "schemat" : "smallspan" %>" >
 							<a class="padless plain white block" href="/panel/manipulate/entry_edit.mhtml?round_id=<% $round->id %>&entry_id=<%$entry->id%>">
 								<% ($show) ? ($ncfl) ? $entry->region->code : $entry->school->code : "" %>
-								<% $entry->code %>
+								<% $no_codes ? "" : $entry->code %>
 								<% $entry->name %>
 							</a>
 						</span>
