@@ -1,4 +1,7 @@
 
+	- Rolled out a function where a pairing can be paired manually, either from
+	  the panel screen or the schematic directly.  Mostly useful now for IE or
+	  for Congress.  Debate coming soon.
 
 	- Killed a bug that lead randomly to slow performance and hangs if someone
 	  attempted to access the site with a login session which had expired.
